l5e-cdn/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: l5e-cdn
  namespace: l5e
spec:
  replicas: 1
  selector:
    matchLabels:
      app: l5e-cdn
  template:
    metadata:
      labels:
        app: l5e-cdn
    spec:
      containers:
        - name: l5e-cdn
          image: registry.jinora.lan/l5e-cdn:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /data
              name: cdn-data
          readinessProbe:
            httpGet:
              path: /health_check
              port: 3000
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /health_check
              port: 3000
            initialDelaySeconds: 15
      volumes:
        - name: cdn-data
          persistentVolumeClaim:
            claimName: pvc-at-1-cdn
