l5e-cdn/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdn
  namespace: l5e
spec:
  type: ClusterIP
  selector:
    app: l5e-cdn
  ports:
    - port: 3000
      targetPort: 3000
