l5e-cdn/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdn-ingress
  namespace: l5e
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: "cdn.jinora.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cdn
                port:
                  number: 3000
